# callfull

./: README.md  callfull.c  callfull.h
tests/: 00000_readme_example  00001_calls_callback_when_threshold_is_reached.c  00002_buffer_is_filled.c  00003_correct_buffer_data_passed_to_callback.c  00004_user_is_passed_to_callback.c  00005_default_user_is_null.c  00006_increments_i_for_callback.c  00007_callback_size_is_correct.c  00008_reset_sets_times_to_0.c  00009_reset_discards_buffer.c  00010_header_can_be_included_in_cpp.cpp  CMakeLists.txt
